# spice-api

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.test  README.md  bacon.toml
docs/: generate_sql_from_migration.sh  spice.dbm  spice.sql
entity/: Cargo.toml
entity/src/: campaign.rs  experiments.rs  freezing_results.rs  inp_concentrations.rs  locations.rs  mod.rs  phase_change_events.rs  phase_change_temperatures.rs  prelude.rs  projects.rs  regions.rs  s3_assets.rs  samples.rs  sea_orm_active_enums.rs  temperature_probe_configurations.rs  temperature_probes.rs  temperature_readings.rs  time_point_temperatures.rs  time_point_well_states.rs  time_points.rs  tray_configuration_assignments.rs  tray_configurations.rs  trays.rs  treatments.rs  well_phase_transitions.rs  well_temperatures.rs  wells.rs
migration/: Cargo.toml
migration/src/: init_db.sql  lib.rs  m20250120_000002_crudcrate_performance_indexes.rs  m20250122_000002_experiment_results_view.rs  m20250326_152449_create_campaign_table.rs  m20250618_114538_modify_units_move_background_key.rs  m20250618_120731_convert_volume_fields_to_decimal.rs  m20250618_140000_add_projects_rename_campaigns_to_locations.rs  m20250618_150000_rename_liters_to_litres.rs  m20250623_091826_regions_use_numeric_coordinates.rs  m20250623_113815_create_enum_treatment_name.rs  m20250623_130000_wells_numeric_rows.rs  m20250624_000000_create_spice_schema.rs  m20250704_112509_remove_location_dates.rs  m20250704_120000_condensed_post_v0_2_0.rs  m20250708_160000_harmonize_integer_types.rs  m20250718_180000_drop_unused_tables.rs  m20250808_000001_consolidated_schema.rs  m20250808_000002_consolidated_minimal.rs  m20250808_000003_test_simple.rs  m20250808_120000_simplify_tray_data_model.rs  m20250820_000001_add_probe_configurations.rs  m20250822_154010_add_procedural_blank_constraint.rs  m20250826_000001_add_pg_trgm_extension.rs  m20251017_000001_rename_procedural_blank_to_blank.rs  m20251017_000002_remove_water_volume_field.rs
src/: config.rs  main.rs  routes.rs  test_helpers.rs
src/assets/: mod.rs  models.rs  services.rs  tests.rs  views.rs
src/common/: auth.rs  errors.rs  mod.rs  models.rs  state.rs  test_helpers.rs  tests.rs  views.rs
src/experiments/: excel_upload.rs  mod.rs  models.rs  services.rs  tests.rs  views.rs
src/experiments/phase_transitions/: models.rs
src/experiments/probe_temperature_readings/: models.rs
src/experiments/temperatures/: models.rs
src/experiments/test_resources/: merged.xlsx
src/locations/: models.rs  tests.rs  views.rs
src/nucleation_events/: mod.rs  models.rs  tests.rs
src/projects/: mod.rs  models.rs  tests.rs
src/routes/: mod.rs
src/routes/assets/: mod.rs  models.rs  models_old.rs  services.rs  tests.rs  views.rs
src/routes/assets/views/: streaming_hybrid.rs
src/routes/campaigns/: db.rs  models.rs  tests.rs  views.rs
src/routes/entity/src/: campaign.rs  mod.rs  prelude.rs
src/routes/experiments/: comprehensive_validation_tests.rs  db.rs  excel_upload.rs  mod.rs  models.rs  models_old.rs  results.rs  services.rs  tests.rs  views.rs
src/routes/experiments/images/: db.rs
src/routes/experiments/phase_transitions/: models.rs
src/routes/experiments/temperatures/: models.rs
src/routes/inp/: db.rs
src/routes/inp/configs/: db.rs
src/routes/locations/: mod.rs  models.rs  models_old.rs  tests.rs  views.rs
src/routes/nucleation_events/: models.rs
src/routes/projects/: mod.rs  models.rs  tests.rs  views.rs
src/routes/s3/: db.rs
src/routes/samples/: db.rs  mod.rs  models.rs  models_old.rs  services.rs  tests.rs  views.rs
src/routes/samples/treatments/: db.rs
src/routes/temperatures/: mod.rs
src/routes/temperatures/probes/: db.rs
src/routes/temperatures/wells/: db.rs
src/routes/tray_configurations/: mod.rs  models.rs  services.rs  tests.rs
src/routes/tray_configurations/regions/: models.rs
src/routes/tray_configurations/trays/: models.rs
src/routes/tray_configurations/wells/: models.rs
src/routes/trays/: db.rs  mod.rs  models.rs  models_old.rs  services.rs  tests.rs  views.rs
src/routes/trays/concentrations/: db.rs
src/routes/trays/configuration_assignments/: models.rs
src/routes/trays/configurations/: models.rs
src/routes/trays/regions/: db.rs  models.rs
src/routes/trays/wells/: db.rs  models.rs
src/routes/treatments/: models.rs  models_old.rs  tests.rs  views.rs
src/samples/: models.rs  services.rs  tests.rs
src/services/: convex_hull_service.rs  data_processing_service.rs  mod.rs  models.rs
src/services/processing/: database.rs  direct_excel_processor.rs  excel_processor.rs  mod.rs  row_processing.rs  structure.rs  utils.rs
src/tray_configurations/: mod.rs  models.rs  tests.rs  views.rs
src/tray_configurations/probes/: mod.rs  models.rs  services.rs  tests.rs
src/tray_configurations/regions/: models.rs
src/tray_configurations/trays/: models.rs
src/tray_configurations/wells/: models.rs
src/treatments/: models.rs  tests.rs
