[package]
name = "spice-api"
version = "0.1.0"
edition = "2024"
description = "API for managing SPICE lab data in the EERL lab"
license = "MIT"
readme = "README.md"
repository = "https://github.com/EERL-EPFL/spice-api"
keywords = ["eerl", "lab", "data", "api", "axum", "sea-orm"]
categories = ["web-programming", "database"]

[workspace]
members = [".", "migration", "entity"]

[dependencies]
spice_entity = { path = "entity" }
anyhow = "1.0.98"
async-trait = "0.1.85"
aws-config = "1.6.3"
aws-sdk-s3 = "1.91.0"
axum = { version = "0.8.4", features = ["multipart"] }
axum-keycloak-auth = "0.8.3"
base64 = "0.22.1"
byteorder = "1.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
crudcrate = "0.3.2"
dotenvy = "0.15.7"
futures = "0.3.31"
gpx = "0.10.0"
http-body-util = "0.1.3"
hyper = "1.6.0"
migration = { path = "migration" }
multipart = "0.18.0"
rand = "0.9.1"
sea-orm = { version = "1.1.8", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
], default-features = false }
sea-orm-migration = "1.1.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.10.0"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = [
    "axum_extras",
    "uuid",
    "chrono",
    "decimal",
] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.13.2", features = ["serde", "v4", "fast-rng"] }
zip = "2.6.0"

[dev-dependencies]
async-std = { version = "1.13", features = ["attributes"] }
rstest = "0.25.0"
sea-orm = { version = "1.0.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
], default-features = false }
tower = { version = "0.5.2", features = ["util"] }

[lints.clippy]
pedantic = "warn"
