[package]
name = "spice-api"
version = "0.2.1"
edition = "2024"
description = "API for managing SPICE lab data in the EERL lab"
license = "MIT"
readme = "README.md"
repository = "https://github.com/EERL-EPFL/spice-api"
keywords = ["eerl", "lab", "data", "api", "axum", "sea-orm"]
categories = ["web-programming", "database"]

[workspace]
members = [".", "migration", ]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.85"
aws-config = "1.8.1"
aws-sdk-s3 = "1.96.0"
axum = { version = "0.8.4", features = ["multipart"] }
axum-keycloak-auth = "0.8.3"
base64 = "0.22.1"
byteorder = "1.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
# crudcrate = "0.4.1"
crudcrate = { path = "../crudcrate" }
dotenvy = "0.15.7"
futures = "0.3.31"
gpx = "0.10.0"
http-body-util = "0.1.3"
hyper = "1.6.0"
migration = { path = "migration" }
multipart = "0.18.0"
mime = "0.3"
rand = "0.9.1"
sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
], default-features = false }
sea-orm-migration = "1.1.14"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.14.0"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.4.0", features = [
    "axum_extras",
    "uuid",
    "chrono",
    "decimal",
] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.13.2", features = ["serde", "v4", "fast-rng"] }
zip = "4.2.0"
rust_decimal = { version = "1.37.2", features = ["serde-with-float"] }
csv = "1.3"
calamine = "0.28.0"
serde_yml = "0.0.12"
openssl = "0.10.73"

[dev-dependencies]
async-std = { version = "1.13", features = ["attributes"] }
reqwest = { version = "0.12.22", features = ["json", "multipart", "rustls-tls"] }
rstest = "0.25.0"
sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
], default-features = false }
tokio-test = "0.4"
tower = { version = "0.5.2", features = ["util"] }
uuid = { version = "1.0", features = ["v4"] }
axum-test = "17.3.0"
futures-util = "0.3.31"

[lints.clippy]
pedantic = "warn"
