[package]
name = "spice-api"
version = "0.3.2"
edition = "2024"
description = "API for managing SPICE lab data in the EERL lab"
license = "MIT"
readme = "README.md"
repository = "https://github.com/EERL-EPFL/spice-api"
keywords = ["eerl", "lab", "data", "api", "axum", "sea-orm"]
categories = ["web-programming", "database"]
default-run = "spice-api"

[workspace]
members = [".", "migration", ]

[[bin]]
name = "spice-api"
path = "src/main.rs"

[[bin]]
name = "seed_database"
path = "src/bin/seed_database.rs"

[dependencies]
anyhow = "1.0.99"
async-stream = "0.3.6"
async-trait = "0.1.89"
aws-config = "1.8.5"
aws-sdk-s3 = "1.103.0"
axum = { version = "0.8.4", features = ["multipart"] }
axum-keycloak-auth = "0.8.3"
base64 = "0.22.1"
byteorder = "1.5.0"
calamine = "0.30.0"
chrono = { version = "0.4.41", features = ["serde"] }
crc32fast = "1.5.0"
crudcrate = "0.4.5"
# crudcrate = { path = "../crudcrate" }
dotenvy = "0.15.7"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = "1.7.0"
lazy_static = "1.5.0"
migration = { path = "migration" }
mime = "0.3.17"
multipart = "0.18.0"
openssl = "0.10.73"
rand = "0.9.2"
rust_decimal = { version = "1.37.2", features = ["serde-with-float"] }
sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
], default-features = false }
sea-orm-migration = "1.1.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_with = "3.14.0"
tempfile = "3.21.0"
time = "0.3.41"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.4.0", features = [
    "axum_extras",
    "uuid",
    "chrono",
    "decimal",
] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.18.0", features = ["serde", "v4", "fast-rng"] }
zip = "4.5.0"

# CLI tool dependencies
clap = { version = "4.5.46", features = ["derive"] }
console = "0.16.0"
indicatif = "0.18.0"
reqwest = { version = "0.12.23", features = ["json", "multipart", "rustls-tls"] }

[dev-dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.12.23", features = ["json", "multipart", "rustls-tls"] }
sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
], default-features = false }
tower = { version = "0.5.2", features = ["util"] }
uuid = { version = "1.18.0", features = ["v4"] }

[lints.clippy]
pedantic = "warn"
