[package]
name = "spice_entity"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/mod.rs"

[dependencies]
# Sea-ORM itself (with macros + common features)
sea-orm = { version = "1.1.8", features = [
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
], default-features = false }
uuid = { version = "1.13.2", features = ["serde", "v4", "fast-rng"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
utoipa = { version = "5.3.1", features = [
    "axum_extras",
    "uuid",
    "chrono",
    "decimal",
] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
